@@ -29,12 +29,12 @@ tag_message = %v
 
 [Prereqs]
 Message::Passing = 0.114
-Search::Elasticsearch::Async = 5.00
+Search::Elasticsearch::Async = 6.00
 Moo = 1.003001
 
 [Prereqs / TestRequires]
 Test::More = 0.98
 Test::Exception = 0.32
-Search::Elasticsearch = 5.02
+Search::Elasticsearch = 6.00
 AnyEvent = 7.07
 File::Temp = 0.2304
