@@ -1,4 +1,5 @@
 {{ $NEXT }}
+    - compatible with Elasticsearch 6
 
 0.004     2017-11-14 09:32:13+01:00 Europe/Vienna
     - fix missing es_version when using Search::Elasticsearch 5.02 (RT#121186)
